--- a/run_models.ipynb
+++ b/run_models.ipynb
@@ -106,7 +106,8 @@
     "\n",
     "model = get_model(MODEL_TYPE)\n",
     "optimizer = Adam(model.parameters(), lr=LR)\n",
-    "dataset = csv_to_data(DATA_PATH)"
+    "dataset = csv_to_data(DATA_PATH)\n",
+    "model.prep_for_data(dataset)"
    ]
   },
   {
