--- a/run_models.ipynb
+++ b/run_models.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,12 +19,13 @@
     "from dataformatter import *\n",
     "from models import *\n",
     "import matplotlib.pyplot as plt\n",
-    "import os"
+    "import os\n",
+    "import pdb"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,21 +49,26 @@
     "    if mode == 'val':\n",
     "        model.eval()\n",
     "    stats = []\n",
+    "    num_egs = 0\n",
     "    for batch in data_iterator:\n",
     "        # we get the loss from passing the batch to the model\n",
     "        # each model will have it's own way of deadling with the data [we can jointly figure this out]\n",
     "        loss, acc = model(batch)\n",
     "        stats.append([loss.item(), acc.item()])\n",
+    "        num_egs += len(batch)\n",
     "        if mode == 'train':\n",
     "            optimizer.zero_grad()\n",
     "            loss.backward()\n",
     "            optimizer.step()\n",
-    "    return np.array(stats)"
+    "    stats = np.array(stats)\n",
+    "    avg_loss = np.mean(stats[:, 0])\n",
+    "    avg_acc = (stats[:, 1]).sum() / num_egs\n",
+    "    return avg_loss, avg_acc"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,32 +93,20 @@
     "    stats = []\n",
     "    for epoch_ in range(num_epochs):\n",
     "        # get a data iterator for this epoch\n",
-    "        data_iter = get_batch_iterator(data, BATCH_SZ)\n",
+    "        data_iter = get_batch_iterator(dataset, BATCH_SZ)\n",
     "        epoch_stats = run_epoch(model, optimizer, data_iter, mode='train')\n",
     "        # Todo[all] would normally run the validation set at this point\n",
-    "        stats.append(epoch_stats.mean(axis=0))\n",
+    "        stats.append(epoch_stats)\n",
+    "        print('Epoch {} : Avg Loss = {} Avg Acc = {}'.format(epoch_, stats[-1][0], stats[-1][1]))\n",
     "    graph_results(stats, desc)\n",
     "    return model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'FC_CONFIG' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-13-85eff00d2951>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmakedirs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mSAVE_FLDR\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mmodel\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mget_model\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mMODEL_TYPE\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0moptimizer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mAdam\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mparameters\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlr\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mLR\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mdataset\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcsv_to_data\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mDATA_PATH\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/home/ldery/computer_architecture/15740_Project/models.py\u001b[0m in \u001b[0;36mget_model\u001b[0;34m(model_type, **kwargs)\u001b[0m\n\u001b[1;32m     25\u001b[0m         \u001b[0;31m# TODO [All] - we need to implement the individual functions\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     26\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mmodel_type\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'FC'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 27\u001b[0;31m                 \u001b[0mkwargs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mFC_CONFIG\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     28\u001b[0m                 \u001b[0;32massert\u001b[0m \u001b[0;34m'layers'\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mkwargs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'Need to specify layers for MLP model'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     29\u001b[0m                 \u001b[0;32massert\u001b[0m \u001b[0;34m'dropout'\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mkwargs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'Need to specify dropout for MLP model'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'FC_CONFIG' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if not os.path.exists(SAVE_FLDR):\n",
     "    os.makedirs(SAVE_FLDR)\n",
@@ -127,7 +121,20 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 0 : Avg Loss = 0.459167616681458 Avg Acc = 0.7916034587378641\n",
+      "Epoch 1 : Avg Loss = 0.4445128824778842 Avg Acc = 0.798145479368932\n",
+      "Epoch 2 : Avg Loss = 0.44166642240275744 Avg Acc = 0.7988470873786407\n",
+      "Epoch 3 : Avg Loss = 0.4408452345546588 Avg Acc = 0.7988186438106796\n",
+      "Epoch 4 : Avg Loss = 0.44012854680039204 Avg Acc = 0.8001744538834952\n",
+      "Epoch 5 : Avg Loss = 0.4394956774132561 Avg Acc = 0.799463364684466\n"
+     ]
+    }
+   ],
    "source": [
     "model = trainer(model, optimizer, dataset, N_EPOCHS)"
    ]
