--- a/run_models.ipynb
+++ b/run_models.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,12 +35,12 @@
     "LR = 1e-3\n",
     "DATA_PATH = 'hawkeye_trace_belady_graph.csv' # This is the CSV FILE WE ARE TRYING TO ANALYZE\n",
     "SAVE_FLDR = 'results'\n",
-    "N_EPOCHS = 20"
+    "N_EPOCHS = 10"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,14 +68,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "def graph_results(data, desc):\n",
     "    plt.title(desc)\n",
     "    plt.plot(range(len(data)), data[:, 0], color='tab:red', label='Loss')\n",
-    "    plt.plot(range(len(data)), data[:, 0], color='tab:blue', label='Accuracy')\n",
+    "    plt.plot(range(len(data)), data[:, 1], color='tab:blue', label='Accuracy')\n",
     "    plt.legend()\n",
     "    plt.savefig(\"{}/{}.png\".format(SAVE_FLDR, desc.replace(' ', '_')))\n",
     "    plt.show()"
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,13 +98,14 @@
     "        # Todo[all] would normally run the validation set at this point\n",
     "        stats.append(epoch_stats)\n",
     "        print('Epoch {} : Avg Loss = {} Avg Acc = {}'.format(epoch_, stats[-1][0], stats[-1][1]))\n",
+    "    stats = np.array(stats)\n",
     "    graph_results(stats, desc)\n",
     "    return model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,22 +122,32 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "average_prediction#"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 0 : Avg Loss = 0.459167616681458 Avg Acc = 0.7916034587378641\n",
-      "Epoch 1 : Avg Loss = 0.4445128824778842 Avg Acc = 0.798145479368932\n",
-      "Epoch 2 : Avg Loss = 0.44166642240275744 Avg Acc = 0.7988470873786407\n",
-      "Epoch 3 : Avg Loss = 0.4408452345546588 Avg Acc = 0.7988186438106796\n",
-      "Epoch 4 : Avg Loss = 0.44012854680039204 Avg Acc = 0.8001744538834952\n",
-      "Epoch 5 : Avg Loss = 0.4394956774132561 Avg Acc = 0.799463364684466\n"
+      "This is the average prediction :  0.28403348597324535\n",
+      "Epoch 0 : Avg Loss = 0.43677452632940367 Avg Acc = 0.8003451152912622\n",
+      "Epoch 1 : Avg Loss = 0.43725020329929093 Avg Acc = 0.7993021844660194\n",
+      "Epoch 2 : Avg Loss = 0.4374499780767896 Avg Acc = 0.7993969963592233\n",
+      "Epoch 3 : Avg Loss = 0.43640173587369396 Avg Acc = 0.7995866201456311\n"
      ]
     }
    ],
    "source": [
-    "model = trainer(model, optimizer, dataset, N_EPOCHS)"
+    "average_pred = np.mean(dataset[:, -1])\n",
+    "print('This is the average prediction : ', 1.0 - average_pred)\n",
+    "model = trainer(model, optimizer, dataset, num_epochs=N_EPOCHS, desc='Basic MLP Model')"
    ]
   },
   {
