cleaned up code a bit and added bells and whistles for includign more features

--- a/run_models.ipynb
+++ b/run_models.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,17 +114,9 @@
     "\n",
     "model = get_model(MODEL_TYPE)\n",
     "optimizer = Adam(model.parameters(), lr=LR)\n",
-    "dataset = csv_to_data(DATA_PATH)\n",
+    "chosen_columns = model.get_data_columns()\n",
+    "dataset = csv_to_data(DATA_PATH, chosen_columns)\n",
     "model.prep_for_data(dataset)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "average_prediction#"
    ]
   },
   {
@@ -136,17 +128,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "This is the average prediction :  0.28403348597324535\n",
-      "Epoch 0 : Avg Loss = 0.43677452632940367 Avg Acc = 0.8003451152912622\n",
-      "Epoch 1 : Avg Loss = 0.43725020329929093 Avg Acc = 0.7993021844660194\n",
-      "Epoch 2 : Avg Loss = 0.4374499780767896 Avg Acc = 0.7993969963592233\n",
-      "Epoch 3 : Avg Loss = 0.43640173587369396 Avg Acc = 0.7995866201456311\n"
+      "This is the average accuracy :  0.7159665140267546  From predicting all zeros\n",
+      "Epoch 0 : Avg Loss = 0.4827304410259918 Avg Acc = 0.7752484071601942\n",
+      "Epoch 1 : Avg Loss = 0.45567828329117266 Avg Acc = 0.7921344053398058\n",
+      "Epoch 2 : Avg Loss = 0.44966155283370063 Avg Acc = 0.7952726790048543\n",
+      "Epoch 3 : Avg Loss = 0.44766351057994136 Avg Acc = 0.7970266990291263\n",
+      "Epoch 4 : Avg Loss = 0.4459769453500732 Avg Acc = 0.7962682038834952\n"
      ]
     }
    ],
    "source": [
     "average_pred = np.mean(dataset[:, -1])\n",
-    "print('This is the average prediction : ', 1.0 - average_pred)\n",
+    "print('This is the average accuracy : ', 1.0 - average_pred, ' From predicting all zeros')\n",
     "model = trainer(model, optimizer, dataset, num_epochs=N_EPOCHS, desc='Basic MLP Model')"
    ]
   },
