--- a/run_models.ipynb
+++ b/run_models.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,22 +26,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Listing all the hyper-parameters that need to be set here\n",
-    "BATCH_SZ = 32\n",
-    "MODEL_TYPE = 'FC' # OPTIONS ARE : [FC, TRANSFORMER, LSTM]\n",
+    "BATCH_SZ = 512\n",
+    "MODEL_TYPE = 'TRANSFORMER' # OPTIONS ARE : [FC, TRANSFORMER, LSTM]\n",
     "LR = 5e-4\n",
     "DATA_PATH = 'hawkeye_trace_belady_graph.csv' # This is the CSV FILE WE ARE TRYING TO ANALYZE\n",
     "SAVE_FLDR = 'results'\n",
-    "N_EPOCHS = 30"
+    "N_EPOCHS = 30\n",
+    "MODEL_DESC='{} MODEL'.format(MODEL_TYPE)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,9 +55,9 @@
     "    for batch in data_iterator:\n",
     "        # we get the loss from passing the batch to the model\n",
     "        # each model will have it's own way of deadling with the data [we can jointly figure this out]\n",
-    "        loss, acc = model(batch)\n",
+    "        loss, acc, bsz = model(batch)\n",
     "        stats.append([loss.item(), acc.item()])\n",
-    "        num_egs += len(batch)\n",
+    "        num_egs += bsz\n",
     "        if mode == 'train':\n",
     "            optimizer.zero_grad()\n",
     "            loss.backward()\n",
@@ -69,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,20 +116,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "'' is not in list",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-10-021beb3e3e41>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0moptimizer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mAdam\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mparameters\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlr\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mLR\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mchosen_columns\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_data_columns\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0mdataset\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcsv_to_data\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mDATA_PATH\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mchosen_columns\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrm_feature\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Set'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfeat_idx_map\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/home/ldery/computer_architecture/15740_Project/dataformatter.py\u001b[0m in \u001b[0;36mcsv_to_data\u001b[0;34m(fname, chosen_columns)\u001b[0m\n\u001b[1;32m      8\u001b[0m     \u001b[0mheader_names\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m     \u001b[0mdf_npy\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto_numpy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m     \u001b[0mc_ids\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mheader_names\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mx\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mchosen_columns\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mdf_npy\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mc_ids\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/home/ldery/computer_architecture/15740_Project/dataformatter.py\u001b[0m in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m      8\u001b[0m     \u001b[0mheader_names\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m     \u001b[0mdf_npy\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto_numpy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m     \u001b[0mc_ids\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mheader_names\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mx\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mchosen_columns\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mdf_npy\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mc_ids\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mValueError\u001b[0m: '' is not in list"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Program Counter': 0, 'Set': 1, 'Cache Friendly': 2}\n",
+      "True\n"
      ]
     }
    ],
@@ -140,20 +136,54 @@
     "optimizer = Adam(model.parameters(), lr=LR)\n",
     "chosen_columns = model.get_data_columns()\n",
     "dataset = csv_to_data(DATA_PATH, chosen_columns)\n",
-    "model.rm_feature('Set')\n",
-    "print(model.feat_idx_map)"
+    "print(model.feat_idx_map)\n",
+    "print(torch.cuda.is_available())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is the average accuracy :  0.7159665140267546  From predicting all zeros\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/projects/tir4/users/ldery/anaconda3/envs/meta4da/lib/python3.6/site-packages/torch/nn/modules/loss.py:529: UserWarning: Using a target size (torch.Size([14336])) that is different to the input size (torch.Size([14336, 1])) is deprecated. Please ensure they have the same size.\n",
+      "  return F.binary_cross_entropy(input, target, weight=self.weight, reduction=self.reduction)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 0 : Avg Loss = 0.614604903945645 Avg Acc = 0.7108714702886616\n",
+      "Epoch 1 : Avg Loss = 0.5989321776964132 Avg Acc = 0.7156103718793343\n",
+      "Epoch 2 : Avg Loss = 0.5983402642231543 Avg Acc = 0.7155663520717753\n",
+      "Epoch 3 : Avg Loss = 0.5969935913109085 Avg Acc = 0.7170176512656034\n",
+      "Epoch 4 : Avg Loss = 0.5977325167470765 Avg Acc = 0.7157691818004508\n",
+      "Epoch 5 : Avg Loss = 0.5972964757854499 Avg Acc = 0.716375300689147\n",
+      "Epoch 6 : Avg Loss = 0.597133259460764 Avg Acc = 0.7162151363124133\n",
+      "Epoch 7 : Avg Loss = 0.5969956187368597 Avg Acc = 0.7165943838852289\n",
+      "Epoch 8 : Avg Loss = 0.5972772084393547 Avg Acc = 0.7161003461988558\n"
+     ]
+    }
+   ],
    "source": [
-    "# model.prep_for_data(dataset)\n",
-    "# average_pred = np.mean(dataset[:, -1])\n",
-    "# print('This is the average accuracy : ', 1.0 - average_pred, ' From predicting all zeros')\n",
-    "# model = trainer(model, optimizer, dataset, num_epochs=N_EPOCHS, desc='Basic MLP Model')"
+    "model.prep_for_data(dataset)\n",
+    "average_pred = np.mean(dataset[:, -1])\n",
+    "if torch.cuda.is_available():\n",
+    "    model.cuda()\n",
+    "model.use_cuda = torch.cuda.is_available()\n",
+    "print('This is the average accuracy : ', 1.0 - average_pred, ' From predicting all zeros')\n",
+    "model = trainer(model, optimizer, dataset, num_epochs=N_EPOCHS, desc=MODEL_DESC)"
    ]
   },
   {
